Updated ngContent and ElementRef Concepts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" href="#">
     <img src="../assets/images/images.png" alt="logo" style="width:300px;">
   </a>
@@ -16,10 +16,17 @@
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-</nav> -->
+</nav>
 
 <br/>
 <div style="width: 90%">
   <!-- <app-register></app-register> -->
-  <app-book></app-book>
+  <!-- <app-book></app-book> -->
+  <!-- <app-learning></app-learning> -->
+  <app-contentmanager>
+    <!-- If we want to insert a content of one component in another component-->
+    <app-ad-rotator></app-ad-rotator>
+    <app-ad-rotator></app-ad-rotator>
+    <app-ad-rotator></app-ad-rotator>
+  </app-contentmanager>
 </div>  
