--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,14 @@
-<form class="form-horizontal" >
+<form class="form-horizontal"  >
   <div class="form-group">
     <label class="control-label col-sm-2" for="email">Email:</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control" id="email" placeholder="Enter email">
+      <input type="email" class="form-control" id="email" placeholder="Enter email" #email>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="pwd">Password:</label>
     <div class="col-sm-10"> 
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" >
     </div>
   </div>
   
@@ -25,7 +25,7 @@
   </div>
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-default" (click)='submitRegistration()'>Submit</button>
     </div>
   </div>
 </form>
